--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -504,6 +504,7 @@
     <string name="pref_title_pebble_health_store_raw">Store raw record in the database</string>
     <string name="pref_summary_pebble_health_store_raw">Stores the data \"as is\", increasing the database usage to allow for later interpretation.</string>
     <string name="action_db_management">Database management</string>
+    <string name="action_healthspan_management">Database management</string>
     <string name="title_activity_db_management">Database management</string>
     <string name="activity_db_management_import_export_explanation">The database operations use the following path on your device. \nThis path is accessible to other Android apps and your computer. \nExpect to find your exported database (or place the database you want to import) there:</string>
     <string name="activity_db_management_merge_old_title">Legacy database delete</string>
